<resources>
    <string name="app_name">Tradeal</string>
    <string name="sign_in">Sign in</string>
    <string name="logo_app">Logo_app</string>

    <string name="register">Register</string>
    <string name="register_here">Register here</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="LabelDescription"> Information about your product ! :</string>
    <string-array name="Category_array">
        <item>Gaming</item>
        <item>Electronics</item>
        <item>Sports</item>
        <item>Gardening</item>
        <item>Accessories</item>
        <item>Leisure</item>
        <item>BeautyCare</item>
        <item>ChildrensProducts</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
</resources>